Download pdf with xhr

--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -16,7 +16,9 @@
           'Demo PDF'
         )
       "
-      >Click to View Doc</ion-button
-    >
+      >Click to View Doc</ion-button>
+
+
+    <ion-button (click)="downloadFile2()">Click to Download PDF</ion-button>
   </div>
 </ion-content>
